--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,5 +11,6 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"/>
     </head>
     <body>
+        <div id="root"></div>
     </body>
 </html>
